# eShield

./: .dockerignore  .gitignore  .sync_remote.py  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  README_EN.md  ROADMAP.md  eShield_design_utf8enc.txt
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  benchmark.md  deployment.md  dev-linux.md  operations.md
eshield/: Cargo.toml
eshield-common/: Cargo.toml
eshield-common/src/: lib.rs
eshield-ebpf/: Cargo.toml
eshield-ebpf/src/: blacklist.rs  challenge.rs  icmp_flood.rs  l7_scan.rs  main.rs  maps.rs  parser.rs  port_acl.rs  rate_limit.rs  syn_cookie.rs  syn_flood.rs  tcp_reset.rs  udp_flood.rs  waf.rs
eshield/src/: adaptive.rs  alert.rs  audit.rs  auth.rs  blocked.html  challenge.html  config.rs  control.rs  dashboard.html  event_consumer.rs  geoip.rs  health.rs  ip.rs  logging.rs  login.html  login_limiter.rs  main.rs  state.rs  store.rs  threat_intel.rs  timeseries.rs  tui.rs  web.rs
packaging/: config.example.toml  eshield.service
packaging/ansible/: playbook.yml
packaging/ansible/templates/: config.toml.j2  eshield.service.j2
packaging/debian/: postinst  prerm
packaging/k8s/: configmap.yaml  daemonset.yaml  namespace.yaml  service.yaml
packaging/systemd/: eshield.service
packaging/terraform/: main.tf  user-data.sh
scripts/: benchmark.sh  build-release.sh  install.sh  uninstall.sh
systemd/: eshield.service
tests/: debug_geoip.sh  debug_rate_limit.sh  dummy_xdp.c  integration_tests.rs  netns_test.sh
xtask/: Cargo.toml
xtask/src/: main.rs
