[workspace]
resolver = "2"
members = ["eshield", "eshield-common", "eshield-ebpf", "xtask"]

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-ebpf = { version = "0.1.1" }
aya-log = { version = "0.2.1" }
aya-log-ebpf = { version = "0.1.0" }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
# 静态链接、最小体积
panic = "abort"
lto = true
codegen-units = 1
strip = true
