[package]
name = "eshield"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "eBPF/XDP host-level CC defense shield - userspace control plane"

[features]
default = []

[dependencies]
aya = { workspace = true, features = ["async_tokio"] }
aya-log = { workspace = true }
eshield-common = { path = "../eshield-common", features = ["userspace"] }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["macros", "formatting"] }
async-trait = "0.1"
redb = "1.5"
maxminddb = "0.24"
csv = "1.3"
subtle = "2"
ratatui = "0.29"
crossterm = "0.28"
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
rand = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
anyhow = { workspace = true }

[package.metadata.deb]
maintainer = "eShield Maintainers <maintainers@eshield.io>"
copyright = "2026 eShield Contributors"
extended-description = "eBPF/XDP host-level CC defense shield"
section = "net"
priority = "optional"
assets = [
    ["target/x86_64-unknown-linux-musl/release/eshield", "usr/local/bin/eshield", "755"],
    ["packaging/config.example.toml", "etc/eshield/config.toml", "640"],
    ["packaging/eshield.service", "lib/systemd/system/eshield.service", "644"],
]
maintainer-scripts = "packaging/debian/"
depends = "$auto"

[package.metadata.rpm]
package = "eshield"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
eshield = { path = "/usr/local/bin/eshield" }

[package.metadata.rpm.files]
"packaging/config.example.toml" = { path = "/etc/eshield/config.toml", mode = "640" }
"packaging/eshield.service" = { path = "/usr/lib/systemd/system/eshield.service", mode = "644" }
